--- a/zkdm/python/zkdm/dm/help.html
+++ b/zkdm/python/zkdm/dm/help.html
@@ -22,12 +22,14 @@
 <br>					{
 <br>						"name":"event service",
 <br>						"type":"event",
-<br>						"enable": true
+<br>						"enable": true,
+<br>						"url": "http://172.16.1.103:10001/event"
 <br>					}
 <br>					{
 <br>						”name":"teacher video 1",
 <br>						"type":"evel",
-<br>						"enable": false
+<br>						"enable": false,
+<br>						"url": "rtmp://172.16.1.103/fms...."
 <br>					}
 <br>					....
 <br>						]
