zkdm: ptz: 增加支持 ext_get_scales，用于返回镜头当前实际倍率

--- a/zkdm/python/zkdm/ptz/help.html
+++ b/zkdm/python/zkdm/ptz/help.html
@@ -66,6 +66,7 @@
 			</li>
 			<li>/ptz/WHO/get_zoom: 返回倍率值, 具体格式位: {"result":"ok","info":"","value":{"type":"position","data":{"z":Z}}}
 			</li>
+			<li>/ptz/WHO/ext_get_scales: 返回当前镜头的实际倍率，注意，这个值与 get_zoom 返回的含义不同, 具体格式为： {"result":"ok", "info":"", "value":{"type":"double", "data":XXX }} </li>
 		</ul>
 		
 </body>
