--- a/zkdm/python/zkdm/ptz/help.html
+++ b/zkdm/python/zkdm/ptz/help.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1 align="center">云天控制接口</h1>
+<h1 align="center">云台控制接口</h1>
 
 using "http://ip:port/config" to get all configured ptz.
 
@@ -53,14 +53,14 @@ method: <B> left, right, up, down, stop, set_pos, get_pos, set_zoom, get_zoom, p
 	<li>/ptz/WHO/down?speed=N : 向下 </li>
 	<li>/ptz/WHO/stop : 停止上面四个转动 </li>
 	<li>/ptz/WHO/set_pos?x=X&ampy=Y&ampsx=SX&ampsy=SY : 转动到指定位置, X,Y 为绝对位置, SX, SY 为转动速度</li>
-	<li>/ptz/WHO/mouse_trace?x=X&y=Y&sx=SX&sy=Sy : 转动到鼠标指定图像位置,X,Y 为像素点, SX, SY 为转动速度</li>
+	<li>/ptz/WHO/mouse_trace?x=X&y=Y&sx=SX&sy=Sy : 转动到鼠标指定图像位置,X是鼠标点到左边的距离跟宽的比例,Y是鼠标点到上端的距离跟高的比例, SX, SY 为转动速度</li>
 	<li>/ptz/WHO/set_zoom?z=Z : 设置倍率 </li>
 	<li>/ptz/WHO/preset_save?id=ID : 保存预置位, ID为预置位序号</li>
 	<li>/ptz/WHO/preset_call?id=ID : 调用预置位, ID同上</li>
 	<li>/ptz/WHO/preset_clear?id=ID : 删除预置位, ID同上</li>
 	<li>/ptz/WHO/zoom_tele?speed=SPEED : 镜头拉远, SPEED为速度 </li>
 	<li>/ptz/WHO/zoom_wide?speed=SPEED : 镜头拉近, SPEED同上</li>
-	<li>/ptz/WHO/zoom_wid : 停止拉近或拉远镜头</li>
+	<li>/ptz/WHO/zoom_stop: 停止拉近或拉远镜头</li>
 </ul>
 
 <ul> <B> 有返回值, 返回 json 格式 </B>
