--- a/zkdm/python/zkdm/living/help.html
+++ b/zkdm/python/zkdm/living/help.html
@@ -7,99 +7,54 @@
 	直播服务接口:为直播提供启动、停止、暂停等操作接口，同时能提供直播信息设置接口。
  
     <p>
-        <strong>一、获取直播列表:/living/list_streaming</strong></p>
-    <p>
-        返回：application/json</p>
-    <p>
-        {</p>
-    <p>
-        &quot;result&quot;:&quot;ok&quot;</p>
-    <p>
-        &quot;info&quot;:&quot;&quot;</p>
-    <p>
-        &quot;value&quot;:{</p>
-    <p>
-        &quot;type&quot;:&quot;list&quot;</p>
-    <p>
-        &quot;&quot;:[</p>
-    <p>
-        {</p>
-    <p>
-        &quot;Living_id&quot;:&quot;living0&quot;</p>
-    <p>
-        &quot;Living_Name&quot;:&quot;直播一&quot;</p>
-    <p>
-        &quot;Living_Address&quot;:&quot;rtmp://192.168.1.10/live/09700_0&quot;</p>
-    <p>
-        }</p>
-    <p>
-        {</p>
-    <p>
-        &quot;Living_id&quot;:&quot;living1&quot;</p>
-    <p>
-        &quot;Living_Name&quot;:&quot;直播二&quot;</p>
-    <p>
-        &quot;Living_Address&quot;:&quot;rtmp://192.168.1.10/live/09700_1&quot;</p>
-    <p>
-        }</p>
-    <p>
-        }</p>
-    <p>
-        }</p>
-    <p>
-        <strong>一、直播操作</strong></p>
-    <p>
-        1）<strong>/living/(living_id)/start:</strong><span 
-            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">直播开始</span></p>
-    <p>
-        2)<strong>/living/(living_id)/stop:</strong>直播停止</p>
-      <p>
-        返回：application/json</p>
-    <p>
+        <strong>1）调用方法：/living/cmd</strong></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
         //成功&quot;result&quot;=&quot;ok&quot;,&quot;info&quot;=&quot;&quot;,失败&quot;result&quot;=&quot;error&quot;,&quot;info&quot;=&quot;失败原因&quot;</p>
-    <p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
         {</p>
-    <p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
         &quot;result&quot;:&quot;ok&quot;</p>
-    <p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
         &quot;info&quot;:&quot;&quot;</p>
-    <p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
         }</p>
-    <p>
-        <strong>二、直播信息设置</strong></p>
-    <p>
-        //json数据格式</p>
-    <p>
-        {</p>
-    <p>
-        &quot;Width&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Heitht&quot;:&quot;&quot;</p>
-    <p>
-        &quot;FrameRate&quot;:&quot;&quot;</p>
-    <p>
-        &quot;BitRate&quot;:&quot;&quot;</p>
-    <p>
-        &quot;ServerIp&quot;:&quot;&quot;</p>
-    <p>
-        &quot;StreamName&quot;:&quot;&quot;</p>
-    <p>
-        &quot;LivingNum&quot;:&quot;&quot;</p>
-    <p>
-        &quot;LivingType&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Account&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Passward&quot;:&quot;&quot;</p>
-    <p>
-        &quot;NetPort&quot;:&quot;&quot;</p>
-    <p>
-        &quot;RtmpServerName&quot;:&quot;&quot;</p>
-    <p>
-        }</p>
-    <p>
-        例子：/living/(living_id)/setProperty?Width=1920&amp;Height=1080&amp;FrameRate=30&amp;BitRate=192&amp;ServerIP=192.168.1.10&amp;StreamName=test&amp;LivingNum=5&amp;Account=admin&amp;Passward=admin&amp;NetPort=8888&amp;RtmpServerName=test</p>
-    <p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <strong>2)调用例子：</strong></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        实现直播开始的操作命令：/living/cmd?BroadCastCmd==StartBroadCast</p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <strong>3)命令说明：</strong></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <![if !supportLists]><span style="font-size:10.5000pt; font-family:'Calibri'; ">
+        <span style="mso-list:Ignore; ">一、<span>&nbsp;</span></span></span><![endif]><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">直播控制协议</span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <![if !supportLists]><span style="font-size:10.5000pt; font-family:'Calibri'; ">
+        <span style="mso-list:Ignore; ">1、<span>&nbsp;</span></span></span><![endif]><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">直播开始：<font 
+            face="Calibri">BroadCastCmd=StartBroadCast</font></span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <![if !supportLists]><span style="font-size:10.5000pt; font-family:'Calibri'; ">
+        <span style="mso-list:Ignore; ">2、<span>&nbsp;</span></span></span><![endif]><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">停止直播：<font 
+            face="Calibri">BroadCastCmd=StopBroadCast</font></span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <![if !supportLists]><span style="font-size:10.5000pt; font-family:'Calibri'; ">
+        <span style="mso-list:Ignore; ">3、<span>&nbsp;</span></span></span><![endif]><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">直播信息设置：</span><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'Calibri'; ">BroadCastCmd=SetBroadCastPropert</span><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">y&amp;</span><span 
+            style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'Calibri'; ">Width={0}&amp;Height={1}&amp;</span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <span style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'Calibri'; ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        FrameRate={2}&amp;BitRate={3}&amp;ServerIp={4}&amp;StreamName={5}&amp;</span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <span style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'Calibri'; ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        LivingNum={6}&amp;LivingType={7}&amp;Account={8}&amp;Passward={9}&amp;</span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+        <span style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'Calibri'; ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        NetPort={10}&amp;RtmpServerName={11}<o:p></o:p></span></p>
+    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
         &nbsp;</p>
 </body>
 </html>
