--- a/zkdm/python/zkdm/card/help.html
+++ b/zkdm/python/zkdm/card/help.html
@@ -9,226 +9,8 @@
      
     <br />
     <br />
-    1)得到采集卡列表：/card/list<br />
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        返回：application/json</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        {</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;result&quot;:&quot;ok&quot;,</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;info&quot;:&quot;&quot;</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;value&quot;:{</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;type&quot;:&quot;list&quot;</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;data&quot;:[</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        {</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;CardId&quot;:&quot;CardInfo0&quot;</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;CardName<span 
-            style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; float: none; display: inline !important;">&quot;:&quot;教室&quot;</span></p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;IsUse&quot;:&quot;true&quot;</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        }</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        {</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;CardId&quot;:&quot;CardInfo1&quot;</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;CardName<span 
-            style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; float: none; display: inline !important;">&quot;:&quot;教室全景&quot;</span></p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        &quot;IsUse&quot;:&quot;true&quot;</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        }</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        ......</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        ]</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        }</p>
-    <p style="color: rgb(0, 0, 0); font-family: Simsun; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-        }</p>
- 
-    </strong>
-    <p>
-        <strong>2）得到当前配置参数:/card/(CardId)/getParameter</strong></p>
-    <p>
-        返回：application/json</p>
-    <p>
-        /*</p>
-    <p>
-        可变动信息：</p>
-    <p>
-        CardName:每路卡的名称,教师，教师全景，学生，VGA，学生全景，板书</p>
-    <p>
-        CardPort:每路卡的端口号,3000-3005</p>
-    <p>
-        IsUse:每路卡是否禁用,bool类型true, false</p>
-    <p>
-        IsLock：每路卡是否锁定，bool类型true, false</p>
-    <p>
-        BitRate：每路卡的码率，450, 800, 1000, 1500, 2000, 4000, 6000, 8000, 12000, 16000, 
-        20000, 24000, 50000(Kbps)</p>
-    <p>
-        FrameRate：每路卡的帧率</p>
-    <p>
-        Format：每路卡视频格式，TS, MP4, AVI, FLV, ASF</p>
-    <p>
-        DefaultSceneName：当前路资源对应的场景</p>
-    <p>
-        Volume：声音，0-100</p>
-    <p>
-        固定信息：</p>
-    <p>
-        PhysicalAdress：每路卡的物理地址配置，录播机有6块卡，每块卡有两个口，所以0 1是第一块卡，2 3是第二块卡，依次类推</p>
-    <p>
-        GopSize：每路卡的视频质量</p>
-    <p>
-        RecordName：每路卡的录像文件名称</p>
-    <p>
-        TrackNumber：跟踪机编号，1-6 对应6块卡</p>
-    <p>
-        CardType：每路卡的类型，FH8735 PCI, SA7160 PCI, QP0203 PCI</p>
-    <p>
-        Deinterlace_Enable：每路卡的反交错是否可用，bool类型true, false</p>
-    <p>
-        Deinterlace_Type：每路卡的反交错类型，BLENDING, MOTIONAD_APTIVE, FILTER_TRIANGLE</p>
-    <p>
-        VideoWidth：每路卡的视频宽度，分辨率：1920*1080 1280*720， 1080*576, 960*540</p>
-    <p>
-        VideoHeight：每路卡的视频高度，分辨率：1920*1080 1280*720， 1080*576, 960*540</p>
-    <p>
-        InputVideoType：每路卡视频压缩类型，0-7(COMPOSITE,SVIDEO,HDMI,DVI_D,COMPONENTS,DVI_A,SDI,AUTO)</p>
-    <p>
-        InputAudioType：每路卡音频压缩类型，0-3(EMBEDDED_AUDIO, LINE_IN, 
-        SOUNDCARD_MICROPHONE)(这个貌似是从机器上获取的)</p>
-    <p>
-        VideoEncoderType：每路卡视频编码类型，0(SOFTWARE) 1(HARDWARE) 2(INTEL_MEDIA_SDK) 
-        3(NVIDIA_CUDA)</p>
-    <p>
-        AudioEncoderType：每路卡音频编码类型，0(SOFTWARE) 1(HARDWARE) 2(INTEL_MEDIA_SDK) 
-        3(NVIDIA_CUDA)</p>
-    <p>
-        BFrame：目前是只有一个值0</p>
-    <p>
-        RecordProfile：0.1.2(BASELINE, MAIN, HIGH)</p>
-    <p>
-        RecordLevel：LEVEL_1, LEVEL_1B, LEVEL_11, LEVEL_12,LEVEL_13</p>
-    <p>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ......2, ......21, ......22,</p>
-    <p>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ......3, ......31, ......32,&nbsp;</p>
-    <p>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ......4, ......41, ......42,</p>
-    <p>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ......50,......51, ......52,&nbsp;</p>
-    <p>
-        RecordEntropy：0, 1(CAVLC, CABAC)</p>
-    <p>
-        RecordComlexity：0-6(COMPLEXITY_0, ..1, ..2, ..3, ..4, ..5, ..6)</p>
-    <p>
-        IsRecord：true, false</p>
-    <p>
-        */</p>
-    <p>
-        {</p>
-    <p>
-        &quot;CardName&quot;:&quot;&quot;</p>
-    <p>
-        &quot;CardPort&quot;:&quot;&quot;</p>
-    <p>
-        &quot;IsUse&quot;:true</p>
-    <p>
-        &quot;IsLock&quot;:false</p>
-    <p>
-        &quot;BitRate&quot;:&quot;&quot;</p>
-    <p>
-        &quot;FrameRate&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Format&quot;:&quot;&quot;</p>
-    <p>
-        &quot;DefaultSceneName&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Volume&quot;:100</p>
-    <p>
-        &quot;PhysicalAdress&quot;:&quot;&quot;</p>
-    <p>
-        &quot;GopSize&quot;:&quot;&quot;</p>
-    <p>
-        &quot;RecordName&quot;:&quot;&quot;</p>
-    <p>
-        &quot;TrackNumber&quot;:&quot;&quot;</p>
-    <p>
-        &quot;CardType&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Deinterlace_Enable&quot;:&quot;&quot;</p>
-    <p>
-        &quot;Deinterlace_Type&quot;:&quot;&quot;</p>
-    <p>
-        &quot;VideoWidth&quot;:&quot;&quot;</p>
-    <p>
-        &quot;VideoHeight&quot;:&quot;&quot;</p>
-    <p>
-        &quot;InputVideoType&quot;:&quot;&quot;</p>
-    <p>
-        &quot;InputAudioType&quot;:&quot;&quot;</p>
-    <p>
-        &quot;VideoEncoderType&quot;:&quot;&quot;</p>
-    <p>
-        &quot;AudioEncoderType&quot;:&quot;&quot;</p>
-    <p>
-        &quot;BFrame&quot;:&quot;0&quot;</p>
-    <p>
-        &quot;RecordProfile&quot;:&quot;&quot;</p>
-    <p>
-        &quot;RecordLevel&quot;:&quot;&quot;</p>
-    <p>
-        &quot;RecordEntropy&quot;:0</p>
-    <p>
-        &quot;RecordComlexity&quot;:0</p>
-    <p>
-        &quot;IsRecord&quot;:&quot;&quot;</p>
-    <p>
-        }</p>
-    <p>
-        <strong>3）设置配置参数</strong></p>
-    <p>
-        采集卡的配置参数参考getParameter返回的json数据，可以设置其中的一项或多项，比如想设置CardName和BitRate的命令如下：</p>
-    <p>
-        /card/(CardId)/setParameter?CardName=教师全景&amp;BitRate=1500</p>
-    <p>
-        返回：application/json</p>
-    <p>
-        //成功&quot;result&quot;=&quot;ok&quot;,&quot;info&quot;=&quot;&quot;,失败&quot;result&quot;=&quot;error&quot;,&quot;info&quot;=&quot;失败原因&quot;</p>
-    <p>
-        {</p>
-    <p>
-        &quot;result&quot;:&quot;ok&quot;</p>
-    <p>
-        &quot;info&quot;:&quot;&quot;</p>
-    <p>
-        }</p>
-    <p>
-        <strong>4)恢复默认设置：/card/(CardId)/restoreDefault</strong></p>
-    <p>
-        返回：application/json</p>
-    <p>
-        //恢复成功&quot;result&quot;=&quot;ok&quot;,&quot;info&quot;=&quot;&quot;,恢复失败&quot;result&quot;=&quot;error&quot;,&quot;info&quot;=&quot;失败原因&quot;</p>
-    <p>
-        {</p>
-    <p>
-        &quot;result&quot;:&quot;ok&quot;</p>
-    <p>
-        &quot;info&quot;:&quot;&quot;</p>
-    <p>
-        }</p>
-    <p>
-        &nbsp;</p>
+    1)得到采集卡当前配置列表：/card/ResourceList<br />
+    2）得到采集卡默认配置：/card/ResourceListD<br />
+    3)采集卡配置：/card/ResourceListS，需要采用Post的形式来进行采集卡配置信息传输</strong>
 </body>
 </html>
