--- a/zkdm/python/zkdm/dm/help.html
+++ b/zkdm/python/zkdm/dm/help.html
@@ -81,7 +81,7 @@
 						}
 			
 
-			/dm/host?command=type: 获取主机类型
+			dm/host?command=type: 获取主机类型
 			
 				返回: application/json
 					成功:
@@ -106,7 +106,7 @@
 						"info":"can't get host type"
 					}
 
-					/dm/host?command=reformrance:
+					/dm/host?command=reformance:
 					返回: application/json
 						成功:
 					{
