--- a/zkdm/python/zkdm/dm/help.html
+++ b/zkdm/python/zkdm/dm/help.html
@@ -61,7 +61,7 @@
 <br>					返回：application/json
 <br>					成功:
 <br>					{
-<br>							"result":"ok",
+<br>						"result":"ok",
 <br>						"info":""
 <br>					}
 <br>					失败：
@@ -103,7 +103,7 @@
 <br>					"info":"can't get host type"
 <br>				}
 
-<br>		<B>	/dm/host?command=reformance</B>:
+<br>		<B>	/dm/host?command=performance</B>:
 
 <br>			返回: application/json
 <br>						成功:
