--- a/zkdm/python/zkdm/recording/help.html
+++ b/zkdm/python/zkdm/recording/help.html
@@ -448,7 +448,7 @@ font-weight:bold; font-size:16.0000pt; font-family:'Cambria'; }
     <p class="style8" style="layout-grid-mode: char; mso-spacerun: 'yes';">
         RecordCmd=SetCourseInfo&amp;Department={0}&amp;Subject={1}&amp;CourseName={2}<o:p></o:p></p>
     <p class="style9" style="layout-grid-mode: char; mso-spacerun: 'yes';">
-        &amp;Teacher={3}&amp;Address={4}&amp;DateTime={5}&amp;Description={6}<o:p></o:p></p>
+        &amp;Teacher={3}&amp;Address={4}&amp;Grade={5}&amp;DateTime={6}&amp;Description={7}<o:p></o:p></p>
     <p class="style10" style="mso-list: l0 level1 lfo6;">
         <![if !supportLists]><span class="style25">
         <span style="mso-list:Ignore; ">1、<span>&nbsp;</span></span></span><![endif]><span 
