--- a/zkdm/python/zkdm/recording/help.html
+++ b/zkdm/python/zkdm/recording/help.html
@@ -267,6 +267,10 @@ font-weight:bold; font-size:16.0000pt; font-family:'Cambria'; }
             style="mso-spacerun: 'yes'; font-size: 10.5000pt;">RecordCmd</span><span 
             style="mso-spacerun:'yes'; font-size:10.5000pt; font-family:'宋体'; ">=StartRecord</span></p>
     <p>
+        RTSP预览：/recording/cmd?RecordCmd=RtspPreview</p>
+    <p>
+        RTMP直播：/recording/cmd?RecordCmd=RTMPLiving</p>
+    <p>
         录像暂停：/recording/cmd?RecordCmd=PauseRecord</p>
     <p>
         录像停止：/recording/cmd?RecordCmd=StopRecord</p>
