--- a/zkdm/python/zkdm/ptz/config_file_help.html
+++ b/zkdm/python/zkdm/ptz/config_file_help.html
@@ -25,7 +25,7 @@ color:green;
 <ul>
 	<li>fname: config file name</li>
 	<li>return type: json</li>
-	<li class="green"><b>example:http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg(at server point)</b></li>
+	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg">(at server point)</b></li>
 </ul>
 </p>
 <p>
