--- a/zkdm/python/zkdm/ptz/config_file_help.html
+++ b/zkdm/python/zkdm/ptz/config_file_help.html
@@ -25,7 +25,7 @@ color:green;
 <ul>
 	<li>fname: config file name</li>
 	<li>return type: json</li>
-	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg">(at server point)</b></li>
+	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg">http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg</a></b></li>
 </ul>
 </p>
 <p>
@@ -37,7 +37,7 @@ color:green;
 	<li>fname:ditto</li>
 	<li>return type:ditto</li>
 	<li>return content:existing key-value pairs and not existing keys</li>
-	<li class="green"><b>example:http://127.0.0.1:10003/ptz/config_file/test.config/getValuesByKeys?hva&vva</b></li>
+	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/getValuesByKeys?hva&vva">http://127.0.0.1:10003/ptz/config_file/test.config/getValuesByKeys?hva&vva</a></b></li>
 </ul>
 </p>
 <p>
@@ -48,7 +48,7 @@ color:green;
 <ul>
 	<li>fname:ditto</li>
 	<li>return type:ditto</li>
-	<li class="green"><b>example:http://127.0.0.1:10003/ptz/config_file/test.config/setValuesByKeys?hva=50</b></li>
+	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/setValuesByKeys?hva=50">http://127.0.0.1:10003/ptz/config_file/test.config/setValuesByKeys?hva=50</a></b></li>
 </ul>
 </p>
 <p>
@@ -59,7 +59,7 @@ color:green;
 <ul>
 	<li>fname:ditto</li>
 	<li>return type:ditto</li>
-	<li class="green"><b>example:http://127.0.0.1:10003/ptz/config_file/test.config/restart</b></li>
+	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/restart">http://127.0.0.1:10003/ptz/config_file/test.config/restart</a></b></li>
 </ul>
 </p>
 </body>
