--- a/zkdm/python/zkdm/ptz/config_file_help.html
+++ b/zkdm/python/zkdm/ptz/config_file_help.html
@@ -12,6 +12,18 @@ color:red;text-align:center
 color:green;
 }
 </style>
+
+<script type="text/javascript">
+
+function printExample(func)
+{
+	var base_href = window.location.href.split("config_file_help.html")[0];
+	var href = base_href + "config_file/" + "test.config/" + func;
+	var example = "<li class='green'><b>example:<a href=" + href + ">" + href + "</a></b></li>"
+	document.write(example)
+}
+</script>
+
 <meta charset="UTF-8";content="HTML,CSS">
 </head>
 <title>config file interfaces</title>
@@ -25,7 +37,9 @@ color:green;
 <ul>
 	<li>fname: config file name</li>
 	<li>return type: json</li>
-	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg">http://127.0.0.1:10003/ptz/config_file/test.config/get_cfg</a></b></li>
+<script type="text/javascript">
+printExample("get_cfg")
+</script>
 </ul>
 </p>
 <p>
@@ -37,7 +51,9 @@ color:green;
 	<li>fname:ditto</li>
 	<li>return type:ditto</li>
 	<li>return content:existing key-value pairs and not existing keys</li>
-	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/getValuesByKeys?hva&vva">http://127.0.0.1:10003/ptz/config_file/test.config/getValuesByKeys?hva&vva</a></b></li>
+<script type="text/javascript">
+printExample("getValuesByKeys?hva&vva")
+</script>
 </ul>
 </p>
 <p>
@@ -48,7 +64,9 @@ color:green;
 <ul>
 	<li>fname:ditto</li>
 	<li>return type:ditto</li>
-	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/setValuesByKeys?hva=50">http://127.0.0.1:10003/ptz/config_file/test.config/setValuesByKeys?hva=50</a></b></li>
+<script type="text/javascript">
+printExample("setValuesByKeys?hva=50")
+</script>
 </ul>
 </p>
 <p>
@@ -59,7 +77,9 @@ color:green;
 <ul>
 	<li>fname:ditto</li>
 	<li>return type:ditto</li>
-	<li class="green"><b>example:<a href="http://127.0.0.1:10003/ptz/config_file/test.config/restart">http://127.0.0.1:10003/ptz/config_file/test.config/restart</a></b></li>
+<script type="text/javascript">
+printExample("restart")
+</script>
 </ul>
 </p>
 </body>
