--- a/zkdm/python/zkdm/ptz/config_file_help.html
+++ b/zkdm/python/zkdm/ptz/config_file_help.html
@@ -18,7 +18,7 @@ color:green;
 function printExample(func)
 {
 	var base_href = window.location.href.split("config_file_help.html")[0];
-	var href = base_href + "config_file/" + "test.config/" + func;
+	var href = base_href  + "test.config/" + func;
 	var example = "<li class='green'><b>example:<a href=" + href + ">" + href + "</a></b></li>"
 	document.write(example)
 }
